# nodespace-data-store

./: .gitignore  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md  SCHEMA.md
benches/: hierarchy_performance.rs
docs/: NS-115-IMPLEMENTATION.md
examples/: README.md  add_todays_data.rs  check_sample_data.rs  create_comprehensive_sample_datasets.rs  create_date_node_sample.rs  create_fresh_e2e_sample.rs  create_fresh_sample_data.rs  create_lancedb_sample_datasets.rs  create_sample_data.rs  create_simple_date_node.rs  cross_modal_search_demo.rs  debug_get_nodes_for_date.rs  debug_node_metadata.rs  debug_relationships.rs  export_surrealdb_data.rs  fastembed_integration.rs  load_diverse_sample_data.rs  load_documented_sample_data.rs  load_e2e_sample_data.rs  load_hierarchical_sample.rs  load_sample_data.rs  load_shared_sample_entry.rs  migrate_embeddings.rs  proper_arrow_implementation.rs  raw_database_dump.rs  regenerate_embeddings.rs  show_db_structure.rs  show_field_names.rs  simple_regenerate.rs  test_date_queries.rs  test_e2e_data_access.rs  test_lance_basic.rs  test_lance_simple_implementation.rs  test_lancedb_basic.rs  test_shared_sample_access.rs  universal_document_demo.rs  validate_export.rs  validate_search_quality.rs  verify_sample_database.rs  working_data_dump.rs
migration_export/: contains_relationships.json  database_metadata.json  date_nodes.json  export_manifest.json  generic_nodes.json  sibling_relationships.json  task_nodes.json  text_nodes.json
src/: conversions.rs  data_store.rs  error.rs  lance_data_store.rs  lance_data_store_simple.rs  lib.rs  performance.rs  surrealdb_types.rs
src/migration/: lance_import.rs  mod.rs  surrealdb_export.rs
src/schema/: lance_schema.rs  mod.rs
tests/: cross_modal_tests.rs  integration_tests.rs  ns115_root_hierarchy_tests.rs  ns85_benchmark.rs  test_data_persistence.rs
