[package]
name = "nodespace-data-store"
version = "0.1.0"
edition = "2021"
description = "Database, persistence, and vector storage for NodeSpace"

[dependencies]
nodespace-core-types = { path = "../nodespace-core-types" }

# LanceDB Core (primary database)
lancedb = "0.17"
arrow-array = "53"
arrow-schema = "53"
arrow-data = "53"

# AI Stack Integration (optional - will be used when implementing full LanceDB features)
# fastembed = "3.0"
# ort = "1.16" 
# tokenizers = "0.15"

# Data Processing (optional - will be used when implementing full LanceDB features)  
# datafusion = "32"
# polars = { version = "0.35", features = ["lazy"] }

# Core infrastructure
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["std_rng"] }
futures = "0.3"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"